<resources>
    <string name="take_call">Answer</string>
    <string name="clear_call">End</string>
    <string name="hold_call">Hold</string>
    <string name="for_incomings">For incoming calls</string>
    <string name="for_outgoings">For outgoing calls</string>
    <string name="perfs">Performances</string>
    <string name="transport">Transport</string>
    <string name="use_wifi">Use WiFi</string>
    <string name="use_wifi_in_desc">Use WiFi for incoming calls</string>
    <string name="use_wifi_out_desc">Use WiFi for outgoing calls</string>
    <string name="use_other">Use other networks</string>
    <string name="use_other_in_desc">For example WiMax for incoming calls</string>
    <string name="use_other_out_desc">For example WiMax for outgoing calls</string>
    <string name="use_anyway">Use anyway</string>
    <string name="use_anyway_desc">"Don't care Android network status. Should not be used for normal cases"</string>
    <string name="use_3g">Use 3G (and better)</string>
    <string name="use_3g_disclamer">Your carrier MUST allow you to use this option</string>
    <string name="use_edge">Use EDGE</string>
    <string name="use_gprs">Use GPRS</string>
    <string name="lock_wifi">Lock WiFi</string>
    <string name="lock_wifi_desc">Prevent WiFi idle when SIP is connected</string>
    <string name="lock_wifi_perfs">High perfs lock</string>
    <string name="lock_wifi_perfs_desc">Wifi lock in High perfs mode (drain battery faster)</string>
    <string name="enable_tcp">TCP</string>
    <string name="enable_tcp_desc">Enable TCP transport</string>
    <string name="enable_tls">TLS</string>
    <string name="enable_tls_desc">Enable TLS transport</string>
    <string name="enable_udp">UDP</string>
    <string name="enable_udp_desc">Enable UDP transport</string>
    <string name="network_udp_transport_port">UDP Port</string>
    <string name="network_udp_transport_port_desc">Port number to bind locally</string>
    <string name="network_tcp_transport_port">TCP Port</string>
    <string name="network_tcp_transport_port_desc">Port number to bind locally</string>
    <string name="network_rtp_port">RTP port</string>
    <string name="network_rtp_port_desc">Port for RTP ports range start</string>
    <string name="use_ipv6">Use IPv6</string>
    <string name="use_ipv6_desc">Switch to IPv6 mode (your network and phone must support it)</string>
    <string name="enable_dns_srv">Resolve DNS SRV</string>
    <string name="enable_dns_srv_desc">Use the application resolver to resolve DNS names</string>
    <string name="override_nameserver">Use a custom DNS</string>
    <string name="override_nameserver_desc">Left blank to retrieve DNS from Android</string>
    <string name="nat_traversal">NAT traversal</string>
    <string name="enable_ice">Enable ICE</string>
    <string name="enable_ice_desc">Turn on ICE feature</string>
    <string name="enable_turn">Enable TURN</string>
    <string name="enable_turn_desc">Turn on TURN feature</string>
    <string name="turn_server">Turn server</string>
    <string name="turn_server_desc">TURN server (HOST:PORT)</string>
    <string name="turn_username">TURN user</string>
    <string name="turn_username_desc">Username for TURN authentication</string>
    <string name="turn_password">TURN password</string>
    <string name="turn_password_desc">Password for TURN authentication</string>
    <string name="enable_stun">Enable STUN</string>
    <string name="enable_stun_desc">Turn on STUN feature</string>
    <string name="enable_stun2">Use new STUN format</string>
    <string name="enable_stun2_desc">STUN requests for resolving socket mapped address should use the new format</string>
    <string name="stun_server">STUN servers</string>
    <string name="stun_server_desc">STUN servers (HOST[:PORT], …)</string>
    <string name="enable_qos">Enable QoS</string>
    <string name="enable_qos_desc">Enable QoS on packets</string>
    <string name="dscp_val">DSCP value</string>
    <string name="dscp_val_desc">DSCP value for SIP traffic</string>
    <string name="keep_alive_interval">Connection keep alive</string>
    <string name="keep_alive_interval_desc">Interval (sec) for KA packets</string>
    <string name="use_compact_form">Use compact SIP</string>
    <string name="use_compact_form_desc">Reduce SIP packets size. May not work on old SIP servers</string>
    <string name="user_agent">User agent</string>
    <string name="user_agent_desc">Agent presented by the application (if default will add infos)</string>
    <string name="force_no_update">Force no update</string>
    <string name="force_no_update_desc">Some buggy remote party announce to support UPDATE method while it does not, this option force the legacy way to manage UPDATE/re-INVITE</string>
    <string name="timer_min_se">Minimum session expiration</string>
    <string name="timer_min_se_desc">Minimum session expiration period, in seconds. Must not be lower than 90.</string>
    <string name="timer_sess_expires">Session expiration period</string>
    <string name="timer_sess_expires_desc">Session expiration period, in seconds. Must not be lower than min_se.</string>
    <string name="sip_protocol">SIP protocol</string>
    <string name="sip_protocol_desc">SIP protocol tweak.</string>
    <string name="tsx_t1_timeout">Transaction T1 timeout value.</string>
    <string name="tsx_t2_timeout">Transaction T2 timeout value.</string>
    <string name="tsx_t4_timeout">Transaction T4 timeout value.</string>
    <string name="tsx_td_timeout">Transaction completed timer for INVITE.</string>
    <string name="tsx_timeout_desc">Leave -1 for default RFC 3261 values</string>
    <string name="network_route_polling">Check for network changes each (minutes)</string>
    <string name="network_route_polling_desc">Android 4.0 VPN check workaround. Leave to 0 if not in this case to disable</string>
    <string name="disable_tcp_switch">Disable TCP switch</string>
    <string name="disable_tcp_switch_desc">If activated, prevent the stack to switch to TCP for big UDP packets.</string>
    <string name="add_bandwidth_tias_in_sdp">Add bandwidth modifier TIAS in SDP</string>
    <string name="add_bandwidth_tias_in_sdp_desc">As per RFC3890. Needed for video on Avaya servers but breaks buggy parsing for some SIP servers.</string>
    <string name="tls">TLS</string>
    <string name="secure_transport">Secure transport</string>
    <string name="secure_transport_desc">Security mechanism for SIP and RTP</string>
    <string name="secure_media">Secure media</string>
    <string name="network_tls_transport_port">TLS Port</string>
    <string name="network_tls_transport_port_desc">Port number to bind locally</string>
    <string name="network_tls_server_name">TLS server name</string>
    <string name="network_tls_server_name_desc">For multi-hosting server (optional)</string>
    <string name="ca_list_file">TLS CA file</string>
    <string name="ca_list_file_desc">For example /sdcard/CSipSimple/myAuthority.ca</string>
    <string name="cert_file">TLS certificate file</string>
    <string name="cert_file_desc">For example /sdcard/CSipSimple/myCert.crt</string>
    <string name="privkey_file">TLS private key file</string>
    <string name="privkey_file_desc">For example /sdcard/CSipSimple/myKey.key</string>
    <string name="tls_password">TLS password</string>
    <string name="tls_password_desc">TLS password to private key file</string>
    <string name="verify_server">Check server</string>
    <string name="verify_server_desc">"Verify server's certificate"</string>
    <string name="verify_client">Check client</string>
    <string name="verify_client_desc">"Verify client's certificate"</string>
    <string name="tls_method">TLS Method</string>
    <string name="tls_method_desc">Method for TLS transport</string>
    <string name="use_srtp">SRTP mode</string>
    <string name="use_srtp_desc">Mode for Secure RTP</string>
    <string name="use_zrtp">ZRTP mode</string>
    <string name="use_zrtp_desc">Mode for Secured ZRTP</string>
    <string name="audio_quality">Audio quality</string>
    <string name="audio_volume">Volume</string>
    <string name="codecs">Codecs</string>
    <string name="echo_cancellation">Echo cancellation</string>
    <string name="echo_cancellation_desc">Activate echo cancellation</string>
    <string name="enable_vad">Voice audio detection</string>
    <string name="enable_vad_desc">Activate voice audio detection</string>
    <string name="snd_mic_level">Micro amplification</string>
    <string name="snd_mic_level_desc">Adjust the mic signal level (1 do nothing)</string>
    <string name="snd_speaker_level">Speaker amplification</string>
    <string name="snd_speaker_level_desc">Adjust the speaker signal level (1 do nothing)</string>
    <string name="snd_bt_mic_level">Bluetooth mic amplification</string>
    <string name="snd_bt_speaker_level">Bluetooth listening amplification</string>
    <string name="snd_stream_level">Initial stream level</string>
    <string name="snd_stream_level_desc">Set the initial level for audio stream (Android stream)</string>
    <string name="snd_media_quality">Media quality</string>
    <string name="snd_media_quality_desc">Quality of the media stream (modify only if you know what you are doing)</string>
    <string name="snd_clock_rate">Clock rate</string>
    <string name="snd_clock_rate_desc">Audio channel frequency</string>
    <string name="snd_ptime">Audio frame ptime</string>
    <string name="snd_ptime_desc">The value here will affect the samples per frame of both the sound device and the conference bridge. Specifying lower ptime will normally reduce the latency.</string>
    <string name="echo_cancellation_tail">Echo cancellation tail</string>
    <string name="echo_cancellation_tail_desc">Tail length of echo cancellation</string>
    <string name="echo_mode">Echo mode</string>
    <string name="echo_mode_desc">Algorithm for echo</string>
    <string name="sip_dtmf">DTMF mode</string>
    <string name="sip_dtmf_desc">How to send DTMF</string>
    <string name="use_soft_volume">Use software volume</string>
    <string name="use_soft_volume_desc">Use software volume instead of android volume</string>
    <string name="has_io_queue">IO Queue</string>
    <string name="has_io_queue_desc">Activate Queue for input/output</string>
    <string name="codecs_band_types">Connections bandwidth types for codecs</string>
    <string name="auto_connect_bluetooth">Auto connect bluetooth</string>
    <string name="auto_connect_bluetooth_desc">Try to use BT SCO automatically (may break standard audio routing case)</string>
    <string name="auto_connect_speaker">Auto connect rear speaker</string>
    <string name="auto_connect_speaker_desc">Automatically use rear speaker when answering a call</string>
    <string name="auto_detect_speaker">Auto detect speaker usage</string>
    <string name="auto_detect_speaker_desc">Switch to rear speaker when phone is horizontal during a call.</string>
    <string name="codecs_per_bandwidth">Codec priority list per bandwidth</string>
    <string name="codecs_per_bandwidth_desc">Use separate codec priority lists for fast and slow networks</string>
    <string name="audio_troubleshooting">Audio troubleshooting</string>
    <string name="audio_troubleshooting_desc">Workarounds for audio routing</string>
    <string name="codecs_extra_settings">Extra codec settings</string>
    <string name="frames_per_rtp_packet">Frames per RTP packet</string>
    <string name="g729_frame_per_packet">G729 RTP frames per packet</string>
    <string name="ilbc_frame_per_packet">iLBC RTP frames per packet</string>
    <string name="thread_count">Thread count</string>
    <string name="thread_count_desc">Number of thread allocated for the native stack</string>
    <string name="codecs_availability_text">Only available if sip is currently registered</string>
    <string name="misc">Misc</string>
</resources>