<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/perfs" android:key="perfs">
        <CheckBoxPreference android:title="@string/lock_wifi" android:key="lock_wifi" android:summary="@string/lock_wifi_desc" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/lock_wifi_perfs" android:key="lock_wifi_perfs" android:summary="@string/lock_wifi_perfs_desc" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/transport" android:key="transport">
        <CheckBoxPreference android:title="@string/enable_udp" android:key="enable_udp" android:summary="@string/enable_udp_desc" android:defaultValue="true" />
        <EditTextPreference android:numeric="integer" android:title="@string/network_udp_transport_port" android:key="network_udp_transport_port" android:summary="@string/network_udp_transport_port_desc" android:defaultValue="0" />
        <CheckBoxPreference android:title="@string/enable_tcp" android:key="enable_tcp" android:summary="@string/enable_tcp_desc" android:defaultValue="true" />
        <EditTextPreference android:numeric="integer" android:title="@string/network_tcp_transport_port" android:key="network_tcp_transport_port" android:summary="@string/network_tcp_transport_port_desc" android:defaultValue="0" />
        <CheckBoxPreference android:title="@string/disable_tcp_switch" android:key="disable_tcp_switch" android:summary="@string/disable_tcp_switch_desc" android:defaultValue="true" />
        <EditTextPreference android:numeric="integer" android:title="@string/network_rtp_port" android:key="network_rtp_port" android:summary="@string/network_rtp_port_desc" android:defaultValue="4000" />
        <CheckBoxPreference android:title="@string/use_ipv6" android:key="use_ipv6" android:summary="@string/use_ipv6_desc" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/enable_dns_srv" android:key="enable_dns_srv" android:summary="@string/enable_dns_srv_desc" android:defaultValue="false" />
        <EditTextPreference android:title="@string/override_nameserver" android:key="override_nameserver" android:summary="@string/override_nameserver_desc" android:defaultValue="" />
        <EditTextPreference android:numeric="signed" android:title="@string/network_route_polling" android:key="network_route_polling" android:summary="@string/network_route_polling_desc" android:defaultValue="0" />
        <CheckBoxPreference android:title="@string/enable_qos" android:key="enable_qos" android:summary="@string/enable_qos_desc" android:defaultValue="true" />
        <EditTextPreference android:numeric="signed" android:title="@string/dscp_val" android:key="dscp_val" android:summary="@string/dscp_val_desc" android:defaultValue="26" />
        <CheckBoxPreference android:title="@string/use_compact_form" android:key="use_compact_form" android:summary="@string/use_compact_form_desc" android:defaultValue="false" />
        <EditTextPreference android:title="@string/user_agent" android:key="user_agent" android:summary="@string/user_agent_desc" android:defaultValue="CSipSimple" />
    </PreferenceCategory>
    <PreferenceScreen android:title="@string/keep_alive_interval" android:key="keep_alive" android:summary="@string/keep_alive_interval_desc" />
    <PreferenceScreen android:title="@string/secure_transport" android:key="secure_transport" android:summary="@string/secure_transport_desc" />
    <PreferenceScreen android:title="@string/sip_protocol" android:key="sip_protocol" android:summary="@string/sip_protocol_desc" />
    <PreferenceCategory android:title="@string/nat_traversal" android:key="nat_traversal">
        <CheckBoxPreference android:title="@string/enable_ice" android:key="enable_ice" android:summary="@string/enable_ice_desc" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/enable_stun" android:key="enable_stun" android:summary="@string/enable_stun_desc" android:defaultValue="false" />
        <EditTextPreference android:title="@string/stun_server" android:key="stun_server" android:summary="@string/stun_server_desc" android:dependency="enable_stun" android:defaultValue="stun.counterpath.com" />
        <CheckBoxPreference android:title="@string/enable_stun2" android:key="enable_stun2" android:summary="@string/enable_stun2_desc" android:dependency="enable_stun" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/enable_turn" android:key="enable_turn" android:summary="@string/enable_turn_desc" android:defaultValue="false" />
        <EditTextPreference android:title="@string/turn_server" android:key="turn_server" android:summary="@string/turn_server_desc" android:dependency="enable_turn" android:defaultValue="" />
        <EditTextPreference android:title="@string/turn_username" android:key="turn_username" android:summary="@string/turn_username_desc" android:dependency="enable_turn" android:defaultValue="" />
        <EditTextPreference android:title="@string/turn_password" android:key="turn_password" android:summary="@string/turn_password_desc" android:dependency="enable_turn" android:defaultValue="" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/for_incomings" android:key="for_incoming">
        <CheckBoxPreference android:title="@string/use_wifi" android:key="use_wifi_in" android:summary="@string/use_wifi_in_desc" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/use_3g" android:key="use_3g_in" android:summary="@string/use_3g_disclamer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_gprs" android:key="use_gprs_in" android:summary="@string/use_3g_disclamer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_edge" android:key="use_edge_in" android:summary="@string/use_3g_disclamer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_other" android:key="use_other_in" android:summary="@string/use_other_in_desc" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/use_anyway" android:key="use_anyway_in" android:summary="@string/use_anyway_desc" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/for_outgoings" android:key="for_outgoing">
        <CheckBoxPreference android:title="@string/use_wifi" android:key="use_wifi_out" android:summary="@string/use_wifi_out_desc" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/use_3g" android:key="use_3g_out" android:summary="@string/use_3g_disclamer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_gprs" android:key="use_gprs_out" android:summary="@string/use_3g_disclamer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_edge" android:key="use_edge_out" android:summary="@string/use_3g_disclamer" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/use_other" android:key="use_other_out" android:summary="@string/use_other_out_desc" android:defaultValue="true" />
        <CheckBoxPreference android:title="@string/use_anyway" android:key="use_anyway_out" android:summary="@string/use_anyway_desc" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>