<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference android:title="@string/force_no_update" android:key="force_no_update" android:summary="@string/force_no_update_desc" android:defaultValue="true" />
    <CheckBoxPreference android:title="@string/add_bandwidth_tias_in_sdp" android:key="add_bandwidth_tias_in_sdp" android:summary="@string/add_bandwidth_tias_in_sdp_desc" android:defaultValue="false" />
    <EditTextPreference android:numeric="signed" android:title="@string/timer_min_se" android:key="timer_min_se" android:summary="@string/timer_min_se_desc" android:defaultValue="90" />
    <EditTextPreference android:numeric="signed" android:title="@string/timer_sess_expires" android:key="timer_sess_expires" android:summary="@string/timer_sess_expires_desc" android:defaultValue="1800" />
    <EditTextPreference android:numeric="signed" android:title="@string/tsx_t1_timeout" android:key="tsx_t1_timeout" android:summary="@string/tsx_timeout_desc" android:defaultValue="-1" />
    <EditTextPreference android:numeric="signed" android:title="@string/tsx_t2_timeout" android:key="tsx_t2_timeout" android:summary="@string/tsx_timeout_desc" android:defaultValue="-1" />
    <EditTextPreference android:numeric="signed" android:title="@string/tsx_t4_timeout" android:key="tsx_t4_timeout" android:summary="@string/tsx_timeout_desc" android:defaultValue="-1" />
    <EditTextPreference android:numeric="signed" android:title="@string/tsx_td_timeout" android:key="tsx_td_timeout" android:summary="@string/tsx_timeout_desc" android:defaultValue="-1" />
</PreferenceScreen>