<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:id="@id/dropZones" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="bottom|center" android:id="@id/dropHangup" android:background="@drawable/grey_bottom_gradient" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginBottom="0.0dip" android:src="@drawable/ic_in_call_touch_end" android:scaleType="center" android:contentDescription="@string/clear_call" />
    <ImageView android:layout_gravity="center|top" android:id="@id/dropAnswer" android:background="@drawable/grey_top_gradient" android:layout_width="fill_parent" android:layout_height="100.0dip" android:layout_marginTop="0.0dip" android:src="@drawable/ic_in_call_touch_answer" android:scaleType="center" android:contentDescription="@string/take_call" />
    <ImageView android:layout_gravity="center|right" android:id="@id/dropHold" android:background="@drawable/grey_right_gradient" android:layout_width="75.0dip" android:layout_height="fill_parent" android:layout_marginRight="0.0dip" android:src="@drawable/ic_in_call_touch_hold" android:scaleType="center" android:contentDescription="@string/hold_call" />
    <ImageView android:layout_gravity="center|left" android:id="@id/dropXfer" android:background="@drawable/grey_left_gradient" android:layout_width="75.0dip" android:layout_height="fill_parent" android:layout_marginRight="0.0dip" android:src="@drawable/ic_tab_selected_contacts" android:scaleType="center" />
</FrameLayout>